--- a/src/app/trend/trend.component.scss
+++ b/src/app/trend/trend.component.scss
@@ -12,22 +12,25 @@
     }
 }
 
-.btn-container{
-    position: absolute;
+.btn-select-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     margin-left: 10px;
-    z-index: 1;
-}
+    margin-right: 10px;
 
-.select-container {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    width: 200px;
-    z-index: 1;
-    background-color: #fff;
+    .select-container {
+        display: flex;
+        align-items: center;
+        margin-left: auto;
+        
+        span{
+            width: 120px; 
+        }
+    }
 }
 
 .chart {
-    margin-top: 10px;
-    height: 88vh;
+    margin-top: 5px;
+    height: 80vh;
 }
